# familyphotos.ai

./: .gitignore  README.md  enroll.sample.yaml  faces.py  instructions.txt  pyproject.toml
.claude/: settings.local.json
desktop/: ingest_thumbnail_errors.txt  kill-backend-on-port.cmd  kill-backend-on-port.ps1  photos_db.json  photos_db.json.bak  photos_db.sample.json  rebuild_thumbnail_errors.txt
desktop/backend/: ingest_folder.py  main.py  rebuild_thumbnails.py  semantic_search.py
desktop/backend/indexes/: clip-vit-base-patch32.faiss  clip-vit-base-patch32_ids.json
desktop/electron/: index.html  loading.html  main.js  package-lock.json  package.json  renderer.js  setup-shortcuts.ps1  styles.css
familyphotos_ai/: __init__.py  cli.py  cli_index_semantic.py  config.py  deepface_embed.py  images.py  matching.py  pipeline.py
src/familyphotos_ai/: cli.py  config.py  images.py  matching.py  pipeline.py
