[project]
name = "familyphotos-ai"
version = "0.1.0"
description = "Face detection and analysis for family photos using DeepFace and PyTorch."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [
  { name = "adhvik" },
]

dependencies = [
  # Core numeric stack
  # Use NumPy 2.x to satisfy opencv-python (which requires numpy>=2).
  "numpy>=2,<3",
  # PyTorch (CPU or CUDA, depending on how you install wheels)
  # For CUDA-enabled installs on Windows / Python 3.14 you will typically
  # use the PyTorch index-url, but we still pin the version here.
  "torch==2.11.0",
  # OpenCV for image loading / preprocessing
  "opencv-python==4.13.0.92",
  # High-level face detection + embeddings API
  "deepface>=0.0.93",
  "tf-keras",
  # YAML config for enrollment
  "pyyaml>=6.0.2",
  # Stage 2 desktop UI (FastAPI + uvicorn)
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  # HEIC decode (desktop thumbnails + CLIP indexing); Electron cannot render raw HEIC
  "pillow>=10.4.0",
  "pillow-heif>=0.16.0",
  # Stage 3 semantic search
  "transformers>=4.40",
  "faiss-cpu>=1.7.4",
  "accelerate>=0.26",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
familyphotos-index-semantic = "familyphotos_ai.cli_index_semantic:main"


